--- a/KuasCore/KuasCore.csproj
+++ b/KuasCore/KuasCore.csproj
@@ -65,15 +65,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dao\Impl\CourseDao.cs" />
+    <Compile Include="Dao\Impl\EmployeeDao.cs" />
     <Compile Include="Dao\Base\GenericDao.cs" />
-    <Compile Include="Dao\ICourseDao.cs" />
-    <Compile Include="Dao\Mapper\CourseRowMapper.cs" />
+    <Compile Include="Dao\IEmployeeDao.cs" />
+    <Compile Include="Dao\Mapper\EmployeeRowMapper.cs" />
     <Compile Include="Interceptors\ExecutionTimeInterceptor.cs" />
-    <Compile Include="Models\Course.cs" />
+    <Compile Include="Models\Employee.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\ICourseService.cs" />
-    <Compile Include="Services\Impl\CourseService.cs" />
+    <Compile Include="Services\IEmployeeService.cs" />
+    <Compile Include="Services\Impl\EmployeeService.cs" />
     <Compile Include="Core\ObjectFactory.cs" />
   </ItemGroup>
   <ItemGroup>
