--- a/KuasCoreTests/KuasCoreTests.csproj
+++ b/KuasCoreTests/KuasCoreTests.csproj
@@ -96,9 +96,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Dao\CourseDaoUnitTest.cs" />
+    <Compile Include="Dao\EmployeeDaoUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\Impl\CourseServiceUnitTest.cs" />
+    <Compile Include="Services\Impl\EmployeeServiceUnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\KuasCore\KuasCore.csproj">
